# embedding_julia

./: .clang-format  .gitignore  CMakeLists.txt  FindJulia.cmake  LICENSE.md  README.md  embedding.cpp  julia_cpp_ts.cpp  julia_multithreading.cpp  juliadispatcher.cpp  sometests.cpp
